changelog

-- v

++ A new xzone to view and import data not otherwise visible.

++ Preview before honking.

+ Misc UI touchups.

+ Read only support for qonks.

++ Some extra commands for better database retention management.

+ About page.

+ More reliable (retries) meta messages such as follow requests.

+ Better thread support for missing context.

++ A changelog.

+++ Auto fetching and inlining of hoots.

+ Upgrade image library for cleaner screenshots.

+ Not all summaries need labels.

+ Add max-width for video tag.

-- 0.6.0 and prior

All records from this time of primitive development have been lost.